<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/detailScrollView"
    android:layout_marginBottom="16dp"
    android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MovieDetailActivity"
        >

        <ImageView
            android:id="@+id/posterIV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTV"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/movie_poster_attr" />


        <TextView
            android:id="@+id/orig_titleTV"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/o_titlelabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/o_titlelabel" />

        <TextView
            android:id="@+id/summaryTV"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="TextView"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/summarylabel" />

        <TextView
            android:id="@+id/release_dateTV"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="release date"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/releaselabel" />

        <TextView
            android:id="@+id/popularityTV"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="TextView"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/popularitylabel" />

        <TextView
            android:id="@+id/genreTV"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="genre"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/summarylabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/genrelabel"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/votesTV"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="TextView"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/voteslabel" />

        <TextView
            android:id="@+id/voteslabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:paddingRight="8dp"
            android:text="@string/label_votes"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/genrelabel"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/popularitylabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:paddingRight="8dp"
            android:text="@string/label_popularity"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/voteslabel"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/o_titlelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:paddingRight="8dp"
            android:text="@string/label_original_title"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/releaselabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/posterIV" />

        <TextView
            android:id="@+id/summarylabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="165dp"
            android:paddingRight="8dp"
            android:text="@string/label_summary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/genrelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:paddingRight="8dp"
            android:text="@string/label_genres"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/summarylabel"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/releaselabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:paddingRight="8dp"
            android:text="@string/label_release_date"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/popularitylabel"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>